Начинаем пилить модель по-новому

--- a/Energy.UI/Energy.UI.csproj
+++ b/Energy.UI/Energy.UI.csproj
@@ -55,9 +55,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Controls\Connection.xaml.cs">
-      <DependentUpon>Connection.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Controls\Consumer.xaml.cs">
       <DependentUpon>Consumer.xaml</DependentUpon>
     </Compile>
@@ -74,20 +71,18 @@
     <Compile Include="Controls\WorkArea\MultiselectMode.cs" />
     <Compile Include="Controls\WorkArea\StartMode.cs" />
     <Compile Include="Controls\WorkArea\WorkAreaModeBase.cs" />
-    <Compile Include="ElementType.cs" />
+    <Compile Include="Controls\ControlType.cs" />
     <Compile Include="IControl.cs" />
+    <Compile Include="Model\FeaturesModel.cs" />
+    <Compile Include="Model\GraphicModel.cs" />
     <Compile Include="Serialization\TaskModelExporter.cs" />
     <Compile Include="Serialization\TaskModelImporter.cs" />
-    <Compile Include="TaskModel.cs" />
-    <Compile Include="TaskModelGenerator.cs" />
+    <Compile Include="Model\TaskModel.cs" />
+    <Compile Include="Model\TaskModelGenerator.cs" />
     <Compile Include="Windows\NameRequestWindow.xaml.cs">
       <DependentUpon>NameRequestWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\WorkArea\WorkArea.cs" />
-    <Page Include="Controls\Connection.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Controls\Consumer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -146,9 +141,7 @@
       <Name>Start</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Helpers\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
