Хороший, годный GraphicControl, пока без режимов работы. Новая базовая модель. Отказался от старых контролов.

--- a/Energy.UI/Energy.UI.csproj
+++ b/Energy.UI/Energy.UI.csproj
@@ -75,14 +75,18 @@
     <Compile Include="Controls\WorkArea\MultiselectMode.cs" />
     <Compile Include="Controls\WorkArea\StartMode.cs" />
     <Compile Include="Controls\WorkArea\WorkAreaModeBase.cs" />
-    <Compile Include="Controls\ControlType.cs" />
+    <Compile Include="Controls\ParticipantType.cs" />
     <Compile Include="IControl.cs" />
+    <Compile Include="Model\ConsumerModel.cs" />
     <Compile Include="Model\ControlAddedEventArgs.cs" />
     <Compile Include="Model\ControlRemovedEventArgs.cs" />
     <Compile Include="Model\FeaturedItem.cs" />
     <Compile Include="Model\FeaturedItemPropertyDescriptor.cs" />
     <Compile Include="Model\FeaturesModel.cs" />
     <Compile Include="Model\GraphicModel.cs" />
+    <Compile Include="Model\ModelBase.cs" />
+    <Compile Include="Model\StationModel.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Serialization\TaskModelExporter.cs" />
     <Compile Include="Serialization\TaskModelImporter.cs" />
     <Compile Include="Model\TaskModel.cs" />
