--- a/Energy.UI/Energy.UI.csproj
+++ b/Energy.UI/Energy.UI.csproj
@@ -60,12 +60,17 @@
       <DependentUpon>GraphControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\LinkAddedEventArgs.cs" />
+    <Compile Include="Controls\LinkControl.cs" />
     <Compile Include="Controls\ObjectEventArgs.cs" />
+    <Compile Include="Controls\TestCanvas.xaml.cs">
+      <DependentUpon>TestCanvas.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\WorkArea\AddLinkMode.cs" />
     <Compile Include="Controls\WorkArea\DragMode.cs" />
     <Compile Include="Controls\WorkArea\StartMode.cs" />
     <Compile Include="Controls\WorkArea\WorkAreaModeBase.cs" />
     <Compile Include="Controls\ParticipantType.cs" />
+    <Compile Include="Converters\IntToRedStrokeConverter.cs" />
     <Compile Include="Helpers\ModelBindingHelper.cs" />
     <Compile Include="IControl.cs" />
     <Compile Include="Model\ConsumerModel.cs" />
@@ -81,10 +86,17 @@
     <Compile Include="Serialization\TaskModelImporter.cs" />
     <Compile Include="Model\TaskModel.cs" />
     <Compile Include="Model\TaskModelGenerator.cs" />
+    <Compile Include="Windows\EditLinkWindow.xaml.cs">
+      <DependentUpon>EditLinkWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\NameRequestWindow.xaml.cs">
       <DependentUpon>NameRequestWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="Controls\GraphControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\TestCanvas.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -100,6 +112,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Windows\EditLinkWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\NameRequestWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
