--- a/Energy.Tests/Energy.Tests.csproj
+++ b/Energy.Tests/Energy.Tests.csproj
@@ -70,13 +70,13 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Start\Start.csproj">
-      <Project>{5ac2e598-5440-4a74-983c-bdaca31a4304}</Project>
-      <Name>Start</Name>
-    </ProjectReference>
+    <Folder Include="TestCases\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="TestCases\" />
+    <ProjectReference Include="..\Energy.Solving\Energy.Solving.csproj">
+      <Project>{6a5e70f8-4b89-4880-833a-a4e66d3646fc}</Project>
+      <Name>Energy.Solving</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
