--- a/Energy.Solving/Energy.Solving.csproj
+++ b/Energy.Solving/Energy.Solving.csproj
@@ -41,6 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DistanceCalculator.cs" />
+    <Compile Include="PathFinding\Edge.cs" />
+    <Compile Include="PathFinding\Graph.cs" />
+    <Compile Include="PathFinding\Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MainSolver.cs" />
   </ItemGroup>
