--- a/Energy.UI/Energy.UI.csproj
+++ b/Energy.UI/Energy.UI.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Controls\WorkArea\StartMode.cs" />
     <Compile Include="Controls\WorkArea\WorkAreaModeBase.cs" />
     <Compile Include="Controls\ParticipantType.cs" />
+    <Compile Include="Helpers\ColorGenerator.cs" />
     <Compile Include="Helpers\ModelBindingHelper.cs" />
     <Compile Include="IControl.cs" />
     <Compile Include="Model\ConsumerModel.cs" />
