--- a/Energy.Tests/Energy.Tests.csproj
+++ b/Energy.Tests/Energy.Tests.csproj
@@ -60,8 +60,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DebugTest.cs" />
+    <Compile Include="GetTMatrixTests.cs" />
     <Compile Include="MainTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SolverTestConstants.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
