--- a/Energy.Solving/Energy.Solving.csproj
+++ b/Energy.Solving/Energy.Solving.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MainSolver.cs" />
     <Compile Include="SolveResultPrinter.cs" />
+    <Compile Include="Task.cs" />
     <Compile Include="TaskSolveResult.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
