--- a/Energy.UI/App.config
+++ b/Energy.UI/App.config
@@ -14,7 +14,7 @@
                 <value>True</value>
             </setting>
             <setting name="DebugMode" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
         </Energy.UI.Properties.Settings>
     </applicationSettings>
