Разделение задач на расстяние, проводимость и общие параметры

--- a/Energy.UI/App.config
+++ b/Energy.UI/App.config
@@ -16,6 +16,9 @@
             <setting name="DebugMode" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="CombinationType" serializeAs="String">
+                <value>Intersection</value>
+            </setting>
         </Energy.UI.Properties.Settings>
     </applicationSettings>
 </configuration>
