--- a/Energy.Solving/Energy.Solving.csproj
+++ b/Energy.Solving/Energy.Solving.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +48,7 @@
     <Compile Include="PathFinding\Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MainSolver.cs" />
+    <Compile Include="SolveResultCombiner.cs" />
     <Compile Include="SolveResultPrinter.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="TaskSolveResult.cs" />
